fix .jumbotron-codelines color
this is being generated same color as default hsla(0, 0%, 0%, .6) hence text is unredable

rule $color generates both colors and text-shadow properties, so changing in generator breaks text shadow which also make it unreadable on that area (dif from here).

We dont want to gerenrate properties with text shadow so once that is fixed the manual rule can be removed.

 https://github.com/features#ci-cd

text-shadow: 0 1px 0 hsla(0, 0%, 0%, .6);

I have no idea how to ignore propeties such as text shadow.

using 

  "color: hsla(0,0%,100%,.6)": "#dcdcdc",

removes ALL previously generated rules and doesnt generate anything based on straight value swap.

--- a/src/misc.css
+++ b/src/misc.css
@@ -44,12 +44,15 @@
     filter: brightness(60%);
   }
 }
-@-moz-document regexp("^https?://github\.com/(features|security)") {
+@-moz-document regexp("^https?://github\.com/(features|security).*") {
   img[src*="img-"], img[src*="security"] {
     filter: invert(90%) hue-rotate(-180deg) !important;
   }
   img[src*="img-share-achievements.png"] {
     filter: invert(100%) hue-rotate(-85deg) !important;
+  }
+  .jumbotron-codelines {
+    color: #dcdcdc;
   }
 }
 @-moz-document domain("stylishthemes.github.io") {
